Added simple dice roller

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <p>This is a collection of Tabletop RPG Tools. These are very much a work in progress, and will very likely have problems.</p>
   <ul>
     <li><a href="./dungeon/">Dungeon Generator</a></li>
+    <li><a href="./dice/">Dice Roller</a></li>
     <li><a href="https://github.com/illandril/tabletop-rpg-tools">GitHub Project</a></li>
   </ul>
 </body>
